opam-version: "2.0"
version: "4.14.3+trunk"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
synopsis: "OCaml 4.14 maintenance version"
maintainer: "caml-list@inria.fr"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
]
homepage: "https://github.com/ocaml/ocaml/"
bug-reports: "https://github.com/ocaml/ocaml/issues"
depends: [
  # This is OCaml 4.14.3
  "ocaml" {= "4.14.3" & post}

  # General base- packages
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}

  # Architecture (non-Windows)
  # opam-repository at present requires that ocaml-base-compiler is installed
  # using an architecture which matches the machine's, since arch is used in
  # available fields. Cross-compilation at this stage is an unstable accident.
  "host-arch-arm32" {arch = "arm32" & post}
  "host-arch-arm64" {arch = "arm64" & post}
  "host-arch-ppc64" {arch = "ppc64" & post}
  "host-arch-riscv64" {arch = "riscv64" & post}
  "host-arch-s390x" {arch = "s390x" & post}
  # The Windows ports explicitly select the architecture (see below) this
  # facility is not yet available for other platforms.
  "host-arch-x86_32" {os != "win32" & arch = "x86_32" & post}
  ("host-arch-x86_64" {os != "win32" & arch = "x86_64" & post} |
   ("host-arch-x86_32" {os != "win32" & arch = "x86_64" & post} & "ocaml-option-32bit" {os != "win32" & arch = "x86_64"}))
  "host-arch-unknown" {os != "win32" & arch != "arm32" & arch != "arm64" & arch != "ppc64" & arch != "riscv64" & arch != "s390x" & arch != "x86_32" & arch != "x86_64" & post}

  # Port selection (Windows)
  # amd64 mingw-w64 / MSVC
  (("arch-x86_64" {os = "win32" & arch = "x86_64"} &
     (("system-mingw" & "mingw-w64-shims" {os-distribution = "cygwin" & post}) |
      "system-msvc")) |
  # i686 mingw-w64 / MSVC
   ("arch-x86_32" {os = "win32"} &
     (("system-mingw" & "mingw-w64-shims" {os-distribution = "cygwin" & post}) |
      "system-msvc")) |
  # Non-Windows systems
   "host-system-other" {os != "win32" & post})

  # Support Packages
  "flexdll" {>= "0.36" & os = "win32"}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
build-env: MSYS2_ARG_CONV_EXCL = "*"
build: [
  [
    "./configure"
    "--host=x86_64-pc-windows"  {system-msvc:installed & arch-x86_64:installed}
    "--host=x86_64-w64-mingw32" {os-distribution = "cygwin" & system-mingw:installed & arch-x86_64:installed}
    "--host=i686-pc-windows"    {system-msvc:installed & arch-x86_32:installed}
    "--host=i686-w64-mingw32"   {os-distribution = "cygwin" & system-mingw:installed & arch-x86_32:installed}
    "--prefix=%{prefix}%"
    "--docdir=%{doc}%/ocaml"
    "--with-flexdll=%{flexdll:share}%" {os = "win32" & flexdll:installed}
    "-C"
    "--with-afl" {ocaml-option-afl:installed}
    "--disable-native-compiler" {ocaml-option-bytecode-only:installed}
    "--disable-force-safe-string" {ocaml-option-default-unsafe-string:installed}
    "DEFAULT_STRING=unsafe" {ocaml-option-default-unsafe-string:installed}
    "--disable-flat-float-array" {ocaml-option-no-flat-float-array:installed}
    "--enable-flambda" {ocaml-option-flambda:installed}
    "--enable-frame-pointers" {ocaml-option-fp:installed}
    "--disable-naked-pointers" {ocaml-option-nnp:installed}
    "--enable-naked-pointers-checker" {ocaml-option-nnpchecker:installed}
    "CC=cc" {!ocaml-option-32bit:installed & !ocaml-option-musl:installed & (os="openbsd"|os="macos")}
    "CC=musl-gcc" {ocaml-option-musl:installed & os-distribution!="alpine"}
    "CFLAGS=-Os" {ocaml-option-musl:installed}
    "CC=gcc -m32" {ocaml-option-32bit:installed & os="linux"}
    "CC=gcc -Wl,-read_only_relocs,suppress -arch i386 -m32" {ocaml-option-32bit:installed & os="macos"}
    "ASPP=cc -c" {!ocaml-option-32bit:installed & !ocaml-option-musl:installed & (os="openbsd"|os="macos")}
    "ASPP=musl-gcc -c" {ocaml-option-musl:installed & os-distribution!="alpine"}
    "ASPP=gcc -m32 -c" {ocaml-option-32bit:installed & os="linux"}
    "ASPP=gcc -arch i386 -m32 -c" {ocaml-option-32bit:installed & os="macos"}
    "AS=as --32" {ocaml-option-32bit:installed & os="linux"}
    "AS=as -arch i386" {ocaml-option-32bit:installed & os="macos"}
    "--host=i386-linux" {ocaml-option-32bit:installed & os="linux"}
    "--host=i386-apple-darwin13.2.0" {ocaml-option-32bit:installed & os="macos"}
    "PARTIALLD=ld -r -melf_i386" {ocaml-option-32bit:installed & os="linux"}
    "LIBS=-static" {ocaml-option-static:installed}
    "--disable-warn-error"
  ]
  [make "-j%{jobs}%"]
]
install: [make "install"]
depopts: [
  "ocaml-option-32bit"
  "ocaml-option-afl"
  "ocaml-option-bytecode-only"
  "ocaml-option-default-unsafe-string"
  "ocaml-option-no-flat-float-array"
  "ocaml-option-flambda"
  "ocaml-option-fp"
  "ocaml-option-musl"
  "ocaml-option-static"
  "ocaml-option-nnp"
  "ocaml-option-nnpchecker"
]
