opam-version: "2.0"
version: "4.14.3+trunk"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
synopsis: "OCaml 4.14 maintenance version"
maintainer: "caml-list@inria.fr"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "Jérôme Vouillon"
]
homepage: "https://github.com/ocaml/ocaml/"
bug-reports: "https://github.com/ocaml/ocaml/issues"
depends: [
  "ocaml" {= "4.14.3" & post}
  "base-unix" {post}
  "base-bigarray" {post}
  "base-threads" {post}
]
conflict-class: "ocaml-core-compiler"
flags: compiler
build: [
  ["./configure" "--prefix=%{prefix}%" "--docdir=%{doc}%/ocaml"]
  [make "-j%{jobs}%"]
]
install: [make "install"]
