;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (targets compdynlink.ml)
 (deps (:ml ../otherlibs/dynlink/dynlink.ml)
       (:sh ./compify_dynlink.sh))
 (action (run %{sh} %{ml} %{targets})))

(rule
 (targets compdynlink.mli)
 (deps (:ml ../otherlibs/dynlink/dynlink.mli)
       (:sh ./compify_dynlink.sh))
 (action (run %{sh} %{ml} %{targets})))

(rule
 (targets compdynlink_types.ml)
 (deps (:ml ../otherlibs/dynlink/dynlink_types.ml)
       (:sh ./compify_dynlink.sh))
 (action (run %{sh} %{ml} %{targets})))

(rule
 (targets compdynlink_types.mli)
 (deps (:ml ../otherlibs/dynlink/dynlink_types.mli)
       (:sh ./compify_dynlink.sh))
 (action (run %{sh} %{ml} %{targets})))

(rule
 (targets compdynlink_common.ml)
 (deps (:ml ../otherlibs/dynlink/dynlink_common.ml)
       (:sh ./compify_dynlink.sh))
 (action (run %{sh} %{ml} %{targets})))

(rule
 (targets compdynlink_common.mli)
 (deps (:ml ../otherlibs/dynlink/dynlink_common.mli)
       (:sh ./compify_dynlink.sh))
 (action (run %{sh} %{ml} %{targets})))

(rule
 (targets compdynlink_platform_intf.ml)
 (deps (:ml ../otherlibs/dynlink/dynlink_platform_intf.ml)
       (:sh ./compify_dynlink.sh))
 (action (run %{sh} %{ml} %{targets})))
